Archive2/b6/d7cda1f96afbb5/output
main.cpp:10:13: error: no matching function for call to 'foo'
int main(){ foo(foo); }
            ^~~
main.cpp:3:6: note: candidate function not viable: no overload of 'foo' matching 'void (*)()' for 1st argument
void foo(void (*bar)()){ bar(); };
     ^
main.cpp:5:6: note: candidate function not viable: no overload of 'foo' matching 'int' for 1st argument
void foo(int a = 5)
     ^
1 error generated.
